--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,11 @@
     "mindy/template": "dev-master",
     "mindy/query": "dev-master",
     "mindy/orm": "dev-master",
-    "mindy/query_builder": "dev-master"
+    "mindy/query_builder": "dev-master",
+    "symfony/dom-crawler": "^3.1",
+    "symfony/css-selector": "^3.1",
+    "guzzlehttp/guzzle": "^6.2",
+    "cocur/slugify": "^2.3"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
